Details
-
Bug
-
Status: Closed (View Workflow)
-
Minor
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8, 12.3
-
Not for ES Release Notes
Description
These notes don't sound like errors, so IMO --silent shouldn't print them.
-s, --silent Print only error messages.
|
 |
note : The storage engine for the table doesn't support optimize
|
note : Table does not support optimize, doing recreate + analyze instead
|
|