MDEV-38778 mariadbcheck --silent

silence non-errors from admin commands, as it's what --silent
is documented to do